team_snap/kustomize/spin-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: spinnaker
  namespace: spinnaker
  annotations:
    kubernetes.io/ingress.class: internal
spec:
  rules:
    - host: poc-spinnaker.teamsnap.io
      http:
        paths:
          - backend:
              serviceName: spin-deck
              servicePort: 80
    - host: poc-spinnaker-api.teamsnap.io
      http:
        paths:
          - backend:
              serviceName: spin-gate
              servicePort: 8080
